remove some unused files and fix an unintentional conf change in development